@@ -20,12 +20,12 @@ namespace Qyoto
 	public enum QtDebugChannel {
 		QTDB_NONE = 0x00,
 		QTDB_AMBIGUOUS = 0x01,
-		QTDB_METHOD_MISSING = 0x02,
+		QTDB_TRANSPARENT_PROXY = 0x02,
 		QTDB_CALLS = 0x04,
 		QTDB_GC = 0x08,
 		QTDB_VIRTUAL = 0x10,
 		QTDB_VERBOSE = 0x20,
-		QTDB_ALL = QTDB_VERBOSE | QTDB_VIRTUAL | QTDB_GC | QTDB_CALLS | QTDB_METHOD_MISSING | QTDB_AMBIGUOUS
+		QTDB_ALL = QTDB_VERBOSE | QTDB_VIRTUAL | QTDB_GC | QTDB_CALLS | QTDB_TRANSPARENT_PROXY | QTDB_AMBIGUOUS
 	}
 
 	public class Debug {
